--- a/app/views/smartrent/pages/faq.html.erb
+++ b/app/views/smartrent/pages/faq.html.erb
@@ -10,188 +10,161 @@
 </div>
 
 <div class="faq">
-  <div class="item">
-    <div class="q">
-      Q:
-    </div>
-
-    <div class="qa">
-      <div class="question">
-        <p>What is SmartRent and why should I register?</p>
-      </div>
-
-      <div class="answer">
-        <p>
-          A: SmartRent is Bozzuto’s incentive program that gives you the opportunity to earn *$350 per month credit for the time you rent 
-          at <%= link_to "participating Bozzuto managed apartment properties", find_a_new_home_path %>. 
-          It gives you access to automatically-accrued funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %>.
-        </p>
-      </div>
-    </div>
-  </div>
 
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
         <p>
-          What is the maximum amount of money I can earn toward a 
-          purchase of a new <%= link_to "Bozzuto home", find_a_new_home_path %> by registering in the SmartRent program?
+          How do I know if my community participates in SmartRent?
         </p>
       </div>
-
       <div class="answer">
         <p>
-          A: Renters at specific Bozzuto managed properties that participate in the SmartRent program will 
-          earn $350 per month toward the purchase of 
-          a new home up to a maximum of $10,000. 
-          Visit the <%= link_to "Find a SmartRent Apartment", find_apartments_path %> page to see which Bozzuto properties participate in the SmartRent program.
+           You can also go to <%= link_to "Find a SmartRent Apartment", find_apartments_path %> at any time to find the list of participating communities, or feel free to check with your Property Manager.  If a community is Bozzuto owned (or the owner has opted in) and is located in the DMV area, it will be a part of the SmartRent program.
         </p>
       </div>
     </div>
   </div>
-
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
         <p>
-          I have been renting at a <%= link_to "Bozzuto managed community", find_apartments_path %> for some time and it offers the SmartRent program. What happens to those funds?
+          What is the monthly accrual, cap, and time limit for SmartRent?
         </p>
       </div>
-
       <div class="answer">
         <p>
-          A: As a Bozzuto SmartRent community resident, you automatically accrue funds. 
-          Once you activate your online account on this website with the e-mail address used on your lease,
-          you can view your accumulated funds in your SmartRent profile.
-          You are eligible to use these funds towards the purchase of a new <%= link_to "Bozzuto Home", find_a_new_home_path %> after 12 consecutive months 
-          of occupancy at a participating Bozzuto managed apartment community.
+          Each participating resident accrues $350/month, with a $10,000 maximum for a home purchased within 24 months of living in a Bozzuto residence.
         </p>
       </div>
     </div>
   </div>
-
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
         <p>
-          Am I able to use a realtor in my purchase of a Bozzuto home when I use my SmartRent funds?
+          Can I use a realtor in a Bozzuto home SmartRent purchase?
         </p>
       </div>
-
       <div class="answer">
         <p>
-          A: Yes. However, if you chose to use your realtor, your Smart Rent credits will be reduced by 50%.
+         Yes. However, if you chose to use your realtor, your Smart Rent credits will be reduced by 50%.
         </p>
       </div>
     </div>
   </div>
-
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
-        <p>How do I know how much is in my SmartRent account?</p>
+        <p>
+          How do I check my SmartRent balance?
+        </p>
       </div>
-
       <div class="answer">
         <p>
-          A: After you activate your account on this website with the e-mail address used on your lease, 
-          you can access your account statement 24/7 here at <%= link_to root_url, root_url %>
+         After you activate their accounts with the e-mail address used on your lease (under the primary leaseholder), you may access your account statement 24/7 at <%= link_to root_url, root_url %>. You will also receive a monthly SmartRent statement via e-mail.
         </p>
       </div>
     </div>
   </div>
-
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
-        <p>If the Bozzuto Homes community is offering other sales incentives, will I still be able to use my SmartRent funds?</p>
+        <p>
+          Can SmartRent be used in conjunction with other sales incentives?
+        </p>
       </div>
-
       <div class="answer">
         <p>
-          A: SmartRent funds may be used in conjunction with other promotional programs offered at certain Bozzuto Homes communities. 
-          Please check with the sales manager at the <%= link_to "Bozzuto Homes", find_a_new_home_path %> community of your choice for details.
+         SmartRent funds can be used towards closing costs to reduce total out of pocket expense. They cannot replace the required earnest money deposit funds or interim deposits due during the purchase process.
         </p>
       </div>
     </div>
   </div>
-
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
-        <p>Can I use my SmartRent funds as earnest money when I sign my new home sales contract?</p>
+        <p>
+          How long do my credits last for?
+        </p>
       </div>
-
       <div class="answer">
         <p>
-          No. SmartRent funds are credited to the purchaser at the time of Deposit/Settlement and can be applied towards closing costs 
-          or to reduce your monthly payments. They do not replace the required earnest money deposit funds at time of contract 
-          or interim deposits due during the purchase process. 
-          Please consult with the sales manager at the <%= link_to "Bozzuto Homes", find_a_new_home_path %> community of your choice for details.
+         SmartRent credits are available for up to 24 months after a resident moves out of a Bozzuto property.
         </p>
       </div>
     </div>
   </div>
-
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
-        <p>Can I use my SmartRent funds at any Bozzuto Homes community?</p>
+        <p>
+          Can I use my SmartRent funds at any Bozzuto Homes community?
+        </p>
       </div>
-
       <div class="answer">
         <p>
-          Yes. However, SmartRent funds cannot be used with the purchase of a moderately priced home (MPDU) as provided through various county programs.
+         Yes. However, SmartRent funds cannot be used with the purchase of a moderately priced home (MPDU) as provided through various county programs. Some communities (Uplands in Baltimore, MD) will allow a 50% SmartRent credit usage due to the partnership with Baltimore City which lowers purchase prices.
         </p>
       </div>
     </div>
   </div>
-
   <div class="item">
     <div class="q">
       Q:
     </div>
-
     <div class="qa">
       <div class="question">
-        <p>I have a roommate. Can we both participate in SmartRent?</p>
+        <p>
+          If I choose not to buy a Bozzuto Home, am I able to get the credit in cash to use towards buying a home from a different builder?
+        </p>
       </div>
-
       <div class="answer">
         <p>
-          We can only allow one SmartRent participant per apartment unit. Please contact us with questions.
+         No, these credits are not equal to cash and may only be used towards a Bozzuto Home purchase.
         </p>
       </div>
     </div>
   </div>
+  <div class="item">
+    <div class="q">
+      Q:
+    </div>
+    <div class="qa">
+      <div class="question">
+        <p>
+          Who can I contact with more questions?
+        </p>
+      </div>
+      <div class="answer">
+        <p>
+         If you have any further questions, please contact Mary Smith at <a href="mailto:mary.smith@bozzuto.com">mary.smith@bozzuto.com</a>
+        </p>
+      </div>
+    </div>
+  </div>
+
 </div>
 
 <div class="disclaimer">
